--- a/Actividad/Upscaling with AI/EDSR.ipynb
+++ b/Actividad/Upscaling with AI/EDSR.ipynb
@@ -22,21 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'dnn_superres' from 'cv2.cv2' (c:\\users\\kako9\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\cv2\\cv2.cp37-win_amd64.pyd)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-adcee1fcf5d0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mcv2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdnn_superres\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'dnn_superres' from 'cv2.cv2' (c:\\users\\kako9\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\cv2\\cv2.cp37-win_amd64.pyd)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "from cv2 import dnn_superres"
@@ -44,28 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'cv2.cv2' has no attribute 'dnn_superres'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-61f750682b24>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmodel_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"EDSR_x3.pb\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdnn_superres\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'cv2.cv2' has no attribute 'dnn_superres'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_path = \"EDSR_x3.pb\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,10 +50,10 @@
     "model = dnn_superres.DnnSuperResImpl_create()\n",
     "\n",
     "# Leemos la imagen\n",
-    "image = cv2.imread('./input.png')\n",
+    "image = cv2.imread('./original.png')\n",
     "\n",
     "# Cargamos el modelo preentrenado\n",
-    "model.readModel(path)"
+    "model.readModel(model_path)"
    ]
   },
   {
@@ -89,23 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-dc9c9e638ccb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"edsr\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.setModel(\"edsr\", 3)"
+    "model.setModel(\"edsr\", 3)\n",
+    "\n",
+    "\n",
+    "model.setPreferableBackend(cv2.dnn.DNN_BACKEND_CUDA)\n",
+    "model.setPreferableTarget(cv2.dnn.DNN_TARGET_CUDA)"
    ]
   },
   {
@@ -127,6 +95,13 @@
     "# Save the image\n",
     "cv2.imwrite(\"./upscaled.png\", result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
